@@ -76,7 +76,7 @@ CONFIG_ARCH_CHIP="stm32"
 CONFIG_ARCH_CHIP_STM32F207IG=y
 CONFIG_ARCH_BOARD="stm3220g-eval"
 CONFIG_ARCH_BOARD_STM3220G_EVAL=y
-CONFIG_BOARD_LOOPSPERMSEC=16717
+CONFIG_BOARD_LOOPSPERMSEC=10926
 CONFIG_DRAM_SIZE=0x00030000
 CONFIG_DRAM_START=0x20000000
 CONFIG_ARCH_IRQPRIO=y
